Fix code block pre vertical and horizontal overflow.

--- a/theme/org-nav-theme.css
+++ b/theme/org-nav-theme.css
@@ -822,7 +822,7 @@ li {
         margin-top: 20px;
         margin-bottom: 20px;
 
-        width:  95%;
+        width:  100%;
         /* float:right; */
         /* clear:right; */
 
@@ -831,7 +831,16 @@ li {
         box-sizing:border-box;
         /* text-shadow:0px 1px 2px rgba(0,0,0,0.4) */
 
-        overflow-x: scroll;
+        max-height: 500px;
+        
+        /* white-space: pre-wrap; */
+        overflow-x: auto;
+        
+    }
+
+    pre.src{
+        overflow-x: auto;
+        overflow-y: auto;
     }
 
 
